force-app/main/default/objects/E_MOC_TA_Mandatory_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Action_by_TA2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_TA_Mandatory_Mapping3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_by_TA3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_TA_Mandatory_Mapping2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_by_deviated_form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action by deviated form</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_TA_Mandatory_Mapping4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Already_sent_a_noti__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Already sent a noti</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_standard_Remark__c</fullName>
        <label>Compliance standard Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Compliance_standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deviate_Standard_Remark__c</fullName>
        <label>Deviate Standard Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deviate_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deviate Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_MOC_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E-MOC Application</label>
        <referenceTo>E_MOC_Application__c</referenceTo>
        <relationshipLabel>E-MOC TA Mandatory Mapping</relationshipLabel>
        <relationshipName>E_MOC_TA_Mandatory_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>I_have_finished_technical_review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have finished technical review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_have_uploaded_the_deviation_form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have uploaded the deviation form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>N_A_Remark__c</fullName>
        <label>N/A Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MROA</fullName>
                </value>
                <value>
                    <fullName>MROB</fullName>
                </value>
                <value>
                    <fullName>QMOS</fullName>
                </value>
                <value>
                    <fullName>QMEV</fullName>
                </value>
                <value>
                    <fullName>MROC</fullName>
                </value>
                <value>
                    <fullName>MMLF</fullName>
                </value>
                <value>
                    <fullName>MMLD</fullName>
                </value>
                <value>
                    <fullName>MPOE</fullName>
                </value>
                <value>
                    <fullName>MPOF</fullName>
                </value>
                <value>
                    <fullName>TNPA</fullName>
                </value>
                <value>
                    <fullName>TNPB</fullName>
                </value>
                <value>
                    <fullName>TNPC</fullName>
                </value>
                <value>
                    <fullName>TNPD</fullName>
                </value>
                <value>
                    <fullName>TNPE</fullName>
                </value>
                <value>
                    <fullName>TNFX</fullName>
                </value>
                <value>
                    <fullName>TNFL</fullName>
                </value>
                <value>
                    <fullName>ENTS</fullName>
                </value>
                <value>
                    <fullName>ENRM</fullName>
                </value>
                <value>
                    <fullName>ENMM</fullName>
                </value>
                <value>
                    <fullName>ENIM</fullName>
                </value>
                <value>
                    <fullName>ENEM</fullName>
                </value>
                <value>
                    <fullName>QMTS</fullName>
                </value>
                <value>
                    <fullName>TNPP</fullName>
                </value>
                <value>
                    <fullName>ENCM</fullName>
                </value>
                <value>
                    <fullName>EOSC</fullName>
                </value>
                <value>
                    <fullName>MFOP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require__c</fullName>
        <label>Require</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Require</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TA2_Expert_Field__c</fullName>
        <label>TA2 Expert Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA2_Indicator__c</fullName>
        <label>TA2 Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA2_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TA2 Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_TA_Mandatory_Mapping1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TA2_Position__c</fullName>
        <label>TA2 Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA2_s_review_has_been_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TA2&apos;s review is completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TA3_Comment__c</fullName>
        <label>TA3 Comment</label>
        <length>2768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TA3_Expert_Field__c</fullName>
        <label>TA3_Expert_Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA3_ID__c</fullName>
        <label>TA3 ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA3_Indicator__c</fullName>
        <label>TA3_Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA3_Name_c__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TA3 Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_TA_Mandatory_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TA3_Position_c__c</fullName>
        <label>TA3 Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA3_s_review_has_been_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TA3’s review has been completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TA_Level__c</fullName>
        <label>TA Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>The_comment_need_to_be_verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>The comment need to be verified</label>
        <type>Checkbox</type>
    </fields>
    <label>E-MOC TA Mandatory Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>E_MOC_Application__c</columns>
        <columns>Position__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>TA2_Name__c</columns>
        <columns>TA2_Indicator__c</columns>
        <columns>TA3_Name_c__c</columns>
        <columns>Already_sent_a_noti__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Action_by_TA3__c</columns>
        <columns>Action_by_TA2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TMMN-{00000000}</displayFormat>
        <label>E-MOC TA Mandatory Mapping No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>